# cppcommonutil

./: CMakeLists.txt  README.md  d_cpp_util-exports.cmake
cmake/: cli11.cmake  fmt.cmake  platform_folders.cmake  protobuf.cmake  run_process.cmake  spdlog.cmake  sqlite.cmake  sqlitecpp.cmake
cmake/util/: boost_links.cmake  cmake_common_defines.cmake  external_project_write_item_custom.cmake  get_target_props.cmake  write_all_cmake_vars.cmake
include/: application_files.hpp  array_of_char_arrays.hpp  compiletime_char_arr_join.hpp  convenience_diagnostics.hpp  convenience_functions.hpp  d_cpp_reflection.hpp  d_exceptions.hpp  d_log_wrapper.hpp  date_time_helper.hpp  encoding.hpp  file.hpp  misc_tools.hpp  more_fmt.hpp  process_runner.hpp  random_wrapper.hpp  sparse_array_view.hpp  str_util.hpp  two_way_vector_map.hpp  utiltime.hpp  windows_wide_helper.hpp
include/contrib/: errnoname.hpp
include/d_plog/: loggers.hpp  logging.hpp
include/d_spdlog/: spd_logging.hpp
include/linux/: linux.hpp
include/stopwatches/: detailing_output_stopwatch.hpp  log_info_on_destruct_stopwatch.hpp  log_info_on_destruct_stopwatch_trace_macros.hpp  stopwatch.hpp
include/win/: win_wrapper_safe.hpp  windows_error_format.hpp  windows_process_runner.hpp
src/: application_files_platform_folders.cc  file.cc  misc_tools.cc  more_fmt.cc  process_runner.cc  random_wrapper.cc  str_util.cc  tracer_exception.cc
src/contrib/: errnoname.cc
src/d_spdlog/: colorful_sink_factory_singleton.cc  colorful_sink_factory_singleton.hpp  spd_logging.cc
src/linux/: linux.cc
src/stopwatches/: log_info_on_destruct_stopwatch.cc
src/win/: windows_error_format.cc  windows_process_runner.cc
